# hepeng

./: .gitignore  Cargo.toml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/com.hepeng.note.AppDatabase/: 1.json  2.json
android/app/schemas/com.hepeng.note.data.AppDatabase/: 1.json  2.json
android/app/src/androidTest/java/com/hepeng/note/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hepeng/note/: CameraActivity.kt  CameraFileUtils.kt  CameraPreview.kt  CaptureActivity.kt  Constants.kt  GrpcActivity.kt  ImageActivity.kt  ImageDetailActivity.kt  ListActivity.kt  LuminosityAnalyzer.kt  MainActivity.kt
android/app/src/main/res/drawable/: ic_empty_check_box.xml  ic_selected_check_box.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/hepeng/note/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/protos/: build.gradle.kts
android/stub-android/: build.gradle.kts
frontend/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: hnews.rs  main.rs  views.rs
frontend/src/hnews/: async_call.rs  home.rs  post.rs
frontend/src/views/: banner.rs  form.rs
server_hyper/: Cargo.toml
server_hyper/src/: main.rs
server_tonic/: Cargo.toml  build.rs
server_tonic/src/: client.rs  server.rs
(+17 files in other folders)
