[package]
name = "frontend"
version = "0.1.0"
authors = ["emaruli <erwin.pakpahan@julofinance.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
async-recursion = "1.1.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
